tests/fixtures/errors/private_method.z
# A private method (not in the `public:` list) cannot be called from outside.
Widget: class { n: i64 } as {
    public: unit { :show }
    show: function {:this} out i64 is { return this.secret }
    secret: function {:this} out i64 is { return this.n }
}
main: function is { with w: (Widget n: 5) do print "\{w.secret}" }
